--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Calculator+</string>
     <string name="error_zero" translatable="false">Ошибка</string>
+    <string name="stsrtsettings" translatable="false">Настройки</string>
 </resources>
